--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "xss-clean": "^0.1.4"
   }
 }
